Updated registration email and _details partial and rake task to add address

--- a/app/views/email/registration_email.html.erb
+++ b/app/views/email/registration_email.html.erb
@@ -12,6 +12,7 @@
 		<h2>Welcome <%= @user.username %>!</h2>
 			<p style="font-size: 1.2em;">Thank you for registering to MotorGearDen, I hope you enjoy your stay with us and find everything you need<br>
 			If you have any troubles please feel free to contact us!</p>
+			Please note: once signed in, please go to your account details and add your address alongside with your first name and last name otherwise,<br> you will not be able to make any payments.
 </body>
 
 <footer>
