--- a/app/views/member/users/_details.html.erb
+++ b/app/views/member/users/_details.html.erb
@@ -1,4 +1,4 @@
-<h2 id="menu-header">My full details</h2>
+<h2 id="menu-header">My details</h2>
 <div id="details">
 	<ul id="details-list">
 		<li id="detail-list-item"><p id="item-name">Username:</p> <%= @details.username %> </li>
