--- a/app/views/admin/brand/new.html.erb
+++ b/app/views/admin/brand/new.html.erb
@@ -26,6 +26,11 @@ If you are using this page unauthorised, legal action will be taken against you.
 		<%= p.label "User ID", id: "user-edit-label" %><br>
 		<%= p.text_field :user_id, class: "form-control", id: "form-user-edit" %><br>
 	</div>
+	<div class="input-group">
+		<%= p.label "Percentage", id: "user-edit-label" %><br>
+		<%= p.text_field :percentage, class: "form-control", id: "form-user-edit" %><br>
+		<span id="help-block">Helo</span>
+	</div>
 <div class="input-group">
 		<%= p.submit "Create brand", class: "btn btn-primary" %>
 </div>
