--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -120,7 +120,7 @@ footer ul li {
 }
 
 .dropbtn:hover, .dropbtn:focus, .udropbtn:hover, udropbtn:focus {
-	background-color: #66b3ff;
+	background-color: #4da6ff;
 }
 
 .dropdown {
