--- a/app/views/admin/brand/show.html.erb
+++ b/app/views/admin/brand/show.html.erb
@@ -1,4 +1,4 @@
-Hello <%= @brand.name %>
+<h2 id="brand-header">Hello <%= @brand.name.capitalize %></h2>
 
 <table id="brand-table" style="width:100%">
   <tr id="brand-headers">
