--- a/app/views/admin/brand/menu.html.erb
+++ b/app/views/admin/brand/menu.html.erb
@@ -20,7 +20,7 @@
 				<% end %>
 <ul class="list-group" id="brand-list">
 				<% @brands.each do |b| %>
-					<li class="list-group-item" id="brand-list-item"><%= link_to "ID: #{b.id} | #{b.name}", brand_edit_path(b.id), remote: :true, id: "brand-edit-link" %></li>
+					<li class="list-group-item" id="brand-list-item"><%= link_to "ID: #{b.id} | #{b.name}", brand_edit_path(b.id), remote: :true, id: "brand-edit-link" %><%= button_to 'Destroy', brand_destroy_path(b), method: :get, data: {confirm: "Are you sure?"} %></li>
 				<% end %>
 </ul>
 <div id="edit-form"></div>
