--- a/app/assets/stylesheets/motorHome.scss
+++ b/app/assets/stylesheets/motorHome.scss
@@ -21,6 +21,12 @@ span#help {
 
 body {
 	background-color:  #99ccff;
+	background-image: asset-url("background.jpg");
+	background-repeat: no-repeat;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
 }
 
 div#maincontainer {
