--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -16,7 +16,7 @@
     	<div class="seperator"></div>
     	<%= link_to 'Create new category', category_new_path, id: "menu-text-left" if user_is_admin? %>
     	<div class="seperator"></div>
-    	<%= link_to 'Create new affiliate', affiliate_new_path, id: "menu-text-left" if user_is_admin? %>
+    	<%= link_to 'Affiliate menu', affiliate_menu_path, id: "menu-text-left" if user_is_admin? %>
     	<div class="seperator"></div>
     	<%= link_to 'Brand menu', brand_menu_path, id: "menu-text-left" if user_is_admin?%>
   </div>
