--- a/app/views/cart/cart/show.html.erb
+++ b/app/views/cart/cart/show.html.erb
@@ -8,3 +8,5 @@
 <p id="total-display"><%= "£#{@total}" %></p>
 
 <%= link_to "Checkout", new_charge_path, class: "cart-checkout" %>
+
+<%= link_to "Empty cart", empty_cart_path, class: "cart_checkout"  %>
