--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -102,3 +102,12 @@ a#product-add:active {
 	background-image: -webkit-linear-gradient(top,#005ab4 0,#175ea6 100%);
 	background-image: linear-gradient(to bottom,#005ab4 0,#175ea6 100%);
 }
+
+a#wish-glyphicon-heart {
+	color: green; 
+	font-size: 30px; 
+	padding: 0px;
+	margin: 0px;
+	border: 0px;
+	text-decoration: none;
+}
