--- a/app/views/public/public/homepage.html.erb
+++ b/app/views/public/public/homepage.html.erb
@@ -7,10 +7,11 @@
 	<li id="liprod"><span id="product-text">Brand: <%= p.brand.name %></span></li>
 
 	<% if product_available?(p) %>
-		<li id="liprod"><%= link_to "Add item to cart", cart_add_item_path(p.product_id), method: :post, id: "product-add" if user_signed_in? %></li>
+		<li id="liprod"><%= link_to "Add item to cart", cart_add_item_path(p.id), method: :post, id: "product-add" if user_signed_in? %></li>
 	<% else %>
-		<li id="liprod"><%= link_to "Product not available", cart_add_item_path(p.product_id), :disabled => :true if user_signed_in? %></li>
+		<li id="liprod"><%= link_to "Product not available", cart_add_item_path(p.id), :disabled => :true if user_signed_in? %></li>
 	<% end %>
+	<li id="liprod"><div align="left"><%= link_to '', add_to_wishlist_path(p.id), method: :post, class: "glyphicon glyphicon-heart", id: "wish-glyphicon-heart"  %></div></li>
 	<li id="liprod"><div align="right"><%= link_to 'Delete this Product' , product_destroy_path(p), data: {confirm: "Are you sure?"}, id:"delete" if user_is_admin? %></div></li>
 	</ul>
 <% end %>
