Updated user page's style - added admin menu and wishlist menu, positioned username and user picutre

--- a/app/assets/stylesheets/user.scss.erb
+++ b/app/assets/stylesheets/user.scss.erb
@@ -65,3 +65,87 @@
 div#affiliate-check {
 	display: inline-block;	
 }
+
+div#user-profile {
+	width: 100%;
+}
+
+div#profile-picture {
+	text-align: center;
+}
+
+div#profile-picture p#user-name {
+	font-size: 1.8em;
+	color: white;
+	font-weight: lighter;
+}
+
+div#user-action-menu ul, div#user-action-menu ul a {
+	list-style: none;
+	font-size: 1em;
+	color: white;
+	text-decoration: none;
+	width: 20%;
+	border: 3px solid #66b3ff;
+	background-color: #80bfff;
+	-moz-box-shadow: 0 2px 3px 0px rgba(0, 0, 0, 0.5);
+	-webkit-box-shadow: 0 2px 3px 0px rgba(0, 0, 0, 0.5);
+	box-shadow: 0 2px 3px 0px rgba(0, 0, 0, 0.5);
+	z-index: 999999;
+	border: 0;
+}
+
+div#user-action-menu ul {
+	padding-bottom: 4px;
+}
+
+ul li#user-action a:hover {
+	-moz-box-shadow: 0 2px 3px 0px rgba(0, 255, 0, 0.5);
+	-webkit-box-shadow: 0 2px 3px 0px rgba(0, 255, 0, 0.5);
+	box-shadow: 3 5px 7px 3px rgba(0, 255, 0, 0.5);
+	z-index: 999999;
+	border: 0;
+}
+
+ul li#action-menu-header {
+	color: white;
+	font-size: 1.4em;
+	font-weight: bold;
+	text-decoration: underline;
+}
+
+div#user-wishlist {
+	padding-left: 10px;
+	padding-top: 10px;
+	padding-right: 10px;
+	width: 23%;
+	border: 3px solid #66b3ff;
+	background-color: #80bfff;
+	-moz-box-shadow: 0 2px 3px 0px rgba(0, 0, 0, 0.5);
+	-webkit-box-shadow: 0 2px 3px 0px rgba(0, 0, 0, 0.5);
+	box-shadow: 0 2px 3px 0px rgba(0, 0, 0, 0.5);
+	z-index: 999999;
+	border: 0;
+}
+
+div#wishlist-break {
+	border-top: 2px solid lightblue;
+}
+
+img.wishlist-item {
+	width: 256px;
+	height: 163px;
+	display: inline-block;
+}
+
+div#user-wishlist p#user-name {
+	font-size: 1.8em;
+	color: white;
+	font-weight: lighter;
+}
+
+h4#wishlist-header {
+	color: white;
+	font-size: 1.4em;
+	font-weight: bold;
+}
