--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,6 +7,7 @@
 	<div id="menu-collapse">
 		<ul id="menu-nav">
 			<li><%= link_to "#{current_user.brand.name}'s brand details", brand_path(current_user.brand), id: "menu-text-left" if user_is_brand? %></li>
+			<li><%= link_to "Discounts and deals", discounts_path, id: "menu-text-left" %></li>
 		</ul>
 <% if user_is_admin? %>
 	<div class="dropdown">
@@ -16,7 +17,7 @@
     	<div class="seperator"></div>
     	<%= link_to 'Create new category', category_new_path, id: "menu-text-left" if user_is_admin? %>
     	<div class="seperator"></div>
-    	<%= link_to 'Create new affiliate', affiliate_new_path, id: "menu-text-left" if user_is_admin? %>
+    	<%= link_to 'Create new affiliate', affiliate_menu_path, id: "menu-text-left" if user_is_admin? %>
     	<div class="seperator"></div>
     	<%= link_to 'Brand menu', brand_menu_path, id: "menu-text-left" if user_is_admin?%>
   </div>
